# AIFL-Documentation

./: .replit  =2.1.9  =2.26.0  Pasted-1-Test-Data-Encryption-and-Decryption-Objective-Verify-that-the-encrypt-data-function-correctly-en-1729249003175.txt  Pasted-2-Test-AIFL-Symbol-Processing-and-OpenAI-API-Interaction-Objective-Ensure-that-the-aifl-process-an-1729249171201.txt  Pasted-Congratulations-on-successfully-implementing-the-test-cases-and-updating-your-code-and-documentation-1729282208051.txt  Pasted-Highlights-from-Your-Output-Successful-Data-Encryption-Test-bash-Copy-code-INFO-main-1-Dat-1729283529750.txt  Pasted-Next-Steps-1-Implement-Corrections-Update-your-code-with-the-corrected-OpenAI-library-usage-Decide-1729248405962.txt  Pasted-Next-Steps-With-your-codebase-now-robust-and-thoroughly-tested-here-are-some-suggestions-for-moving-1729282534005.txt  Pasted-Next-Steps-for-Your-AIFL-Project-1-Enhance-the-AIFL-Interpreter-Objective-Improve-the-interpreter--1729282780517.txt  Pasted-Observations-and-Feedback-1-OpenAI-API-Usage-Issue-Incorrect-Library-Import-and-Client-Initializat-1729247954296.txt  Pasted-Regarding-your-question-about-updating-the-script-Yes-I-believe-it-s-a-good-idea-to-include-both-t-1729247385395.txt  Pasted-Understanding-the-Error-The-error-you-re-encountering-is-from-the-Lark-parser-plaintext-Copy-code--1729282986788.txt  README.md  aifl_executor.py  aifl_parser.py  aifl_symbols.py  app.py  encryption.py  functional_test.py  index.html  install.sh  install_deps.py  main.py  mkdocs.yml  pyproject.toml  pytest.ini  replit.nix  replit_config.py  (+14 more)
(+148 files in other folders)
