[project]
name = "repl-nix-aifl-docassist"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "cryptography==3.4.7",
    "flask==2.3.2",
    "lark-parser==0.12.0",
    "lark>=1.2.2",
    "openai==0.27.0",
    "requests==2.27.1",
    "werkzeug==2.3.3",
]
